# Almost-APT

./: .gitignore  README.md  pyproject.toml
almostapt/: __init__.py  almost_apt_groups.txt  app.py  config.py
almostapt/errorpages/: errorhandlerpage.py
almostapt/exceptions/: mongodb_error.py
almostapt/main/: routes.py
almostapt/static/css/: styles.css
almostapt/static/js/: group_results.js  scripts.js
almostapt/templates/: 404.html  500.html  all_groups.html  base.html  not_found.html  search_home.html  searchresults.html  threat_group.html
almostapt/templates/errors/: 403.html  404.html  500.html
tests/: test_almostapt.py
