[tool.poetry]
name = "almostapt"
version = "0.1.0"
description = ""
authors = ["Mike R <cr8syoki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
